add rules pattern examples add new name reader extensions add new DateTimeAsserter add new PropertiesAsserter

--- a/PatternsInAutomation.Tests/PatternsInAutomation.Tests/PatternsInAutomation.Tests.csproj
+++ b/PatternsInAutomation.Tests/PatternsInAutomation.Tests/PatternsInAutomation.Tests.csproj
@@ -160,6 +160,20 @@
     <Compile Include="Advanced\PageObjectv2.0\Pages\BingMain\BingMainPageAsserter.cs" />
     <Compile Include="Advanced\PageObjectv2.0\Pages\BingMain\BingMainPageMap.cs" />
     <Compile Include="Advanced\PageObjectv2.0\Pages\BingMain\IBingMainPage.cs" />
+    <Compile Include="Advanced\Rules\BaseRule.cs" />
+    <Compile Include="Advanced\Rules\PromotionalPurchaseRule.cs" />
+    <Compile Include="Advanced\Rules\CreditCardChargeRule[TRuleResult].cs" />
+    <Compile Include="Advanced\Rules\Data\PurchaseTestInput.cs" />
+    <Compile Include="Advanced\Rules\CreditCardChargeRule.cs" />
+    <Compile Include="Advanced\Rules\CreditCardChargeRuleAssertResult.cs" />
+    <Compile Include="Advanced\Rules\CreditCardChargeRuleRuleResult.cs" />
+    <Compile Include="Advanced\Rules\IRule.cs" />
+    <Compile Include="Advanced\Rules\IRuleResult.cs" />
+    <Compile Include="Advanced\Rules\NullRule.cs" />
+    <Compile Include="Advanced\Rules\RuleResult.cs" />
+    <Compile Include="Advanced\Rules\RulesChain.cs" />
+    <Compile Include="Advanced\Rules\RulesEvaluator.cs" />
+    <Compile Include="Advanced\Rules\RulesEvaluatorTests.cs" />
     <Compile Include="Advanced\Strategy\Advanced\Base\IOrderPurchaseStrategy.cs" />
     <Compile Include="Advanced\Strategy\Advanced\Base\PurchaseContext.cs" />
     <Compile Include="Advanced\Strategy\Advanced\Base\PurchaseFacade.cs" />
