--- a/PatternsInAutomation.Tests/CSharp.Series.Tests/CSharp.Series.Tests.csproj
+++ b/PatternsInAutomation.Tests/CSharp.Series.Tests/CSharp.Series.Tests.csproj
@@ -63,6 +63,10 @@
       <HintPath>..\packages\Microsoft.CodeAnalysis.Workspaces.Common.1.0.0\lib\net45\Microsoft.CodeAnalysis.Workspaces.Desktop.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>C:\Program Files (x86)\Microsoft Visual Studio 12.0\Common7\IDE\PublicAssemblies\Microsoft.VisualStudio.QualityTools.UnitTestFramework.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Collections.Immutable, Version=1.1.36.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Collections.Immutable.1.1.36\lib\portable-net45+win8+wp8+wpa81\System.Collections.Immutable.dll</HintPath>
@@ -118,6 +122,13 @@
     <Compile Include="Minions.cs" />
     <Compile Include="ObsoleteExample.cs" />
     <Compile Include="Program.cs" />
+    <Compile Include="PropertiesAsLambdas\Client.cs" />
+    <Compile Include="PropertiesAsLambdas\NameReaderExtensions.cs" />
+    <Compile Include="PropertiesAsserter\DateTimeAssert.cs" />
+    <Compile Include="PropertiesAsserter\DateTimeDeltaType.cs" />
+    <Compile Include="PropertiesAsserter\ObjectToAssert.cs" />
+    <Compile Include="PropertiesAsserter\ObjectToAssertAsserter.cs" />
+    <Compile Include="PropertiesAsserter\PropertiesAsserter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ThreadSafeLazyBaseSingleton.cs" />
     <Compile Include="Utils\FileWriter.cs" />
@@ -128,6 +139,9 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Service References\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
