add specification design pattern related logic

--- a/PatternsInAutomation.Tests/PatternsInAutomation.Tests/PatternsInAutomation.Tests.csproj
+++ b/PatternsInAutomation.Tests/PatternsInAutomation.Tests/PatternsInAutomation.Tests.csproj
@@ -161,6 +161,7 @@
     <Compile Include="Advanced\PageObjectv2.0\Pages\BingMain\BingMainPageMap.cs" />
     <Compile Include="Advanced\PageObjectv2.0\Pages\BingMain\IBingMainPage.cs" />
     <Compile Include="Advanced\Rules\BaseRule.cs" />
+    <Compile Include="Advanced\Specifications\Base\BaseElementMap.cs" />
     <Compile Include="Advanced\Rules\PromotionalPurchaseRule.cs" />
     <Compile Include="Advanced\Rules\CreditCardChargeRule[TRuleResult].cs" />
     <Compile Include="Advanced\Rules\Data\PurchaseTestInput.cs" />
@@ -174,6 +175,29 @@
     <Compile Include="Advanced\Rules\RulesChain.cs" />
     <Compile Include="Advanced\Rules\RulesEvaluator.cs" />
     <Compile Include="Advanced\Rules\RulesEvaluatorTests.cs" />
+    <Compile Include="Advanced\Specifications\AndSpecification.cs" />
+    <Compile Include="Advanced\Specifications\Base\BasePage.cs" />
+    <Compile Include="Advanced\Specifications\BingMain\BingMainPage.cs" />
+    <Compile Include="Advanced\Specifications\BingMain\BingMainPage.Map.cs" />
+    <Compile Include="Advanced\Specifications\BingMain\BingMainPageAsserter.cs" />
+    <Compile Include="Advanced\Specifications\BingMain\BingMainPageMap.cs" />
+    <Compile Include="Advanced\Specifications\ExpressionSpecification.cs" />
+    <Compile Include="Advanced\Specifications\ExtensionMethods.cs" />
+    <Compile Include="Advanced\Specifications\FreePurchaseSpecification.cs" />
+    <Compile Include="Advanced\Specifications\OrderTestContextConfigurator.cs" />
+    <Compile Include="Advanced\Specifications\OrderTestContext.cs" />
+    <Compile Include="Advanced\Specifications\PlaceOrderPage\PlaceOrderPage.cs" />
+    <Compile Include="Advanced\Specifications\PlaceOrderPage\PlaceOrderPage.Map.cs" />
+    <Compile Include="Advanced\Specifications\PlaceOrderPage\PlaceOrderPageAsserter.cs" />
+    <Compile Include="Advanced\Specifications\PromotionalPurchaseSpecification.cs" />
+    <Compile Include="Advanced\Specifications\WiretransferSpecification.cs" />
+    <Compile Include="Advanced\Specifications\CreditCardSpecification.cs" />
+    <Compile Include="Advanced\Specifications\Data\PurchaseTestInput.cs" />
+    <Compile Include="Advanced\Specifications\ISpecification.cs" />
+    <Compile Include="Advanced\Specifications\NotSpecification.cs" />
+    <Compile Include="Advanced\Specifications\OrSpecification.cs" />
+    <Compile Include="Advanced\Specifications\SourceOrderDetailIsActiveForChaining.cs" />
+    <Compile Include="Advanced\Specifications\Specification.cs" />
     <Compile Include="Advanced\Strategy\Advanced\Base\IOrderPurchaseStrategy.cs" />
     <Compile Include="Advanced\Strategy\Advanced\Base\PurchaseContext.cs" />
     <Compile Include="Advanced\Strategy\Advanced\Base\PurchaseFacade.cs" />
