--- a/AAngelov.Utilities/AAngelov.Utilities/AAngelov.Utilities.csproj
+++ b/AAngelov.Utilities/AAngelov.Utilities/AAngelov.Utilities.csproj
@@ -48,8 +48,9 @@
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="log4net">
-      <HintPath>..\packages\log4net.2.0.1\lib\net40-full\log4net.dll</HintPath>
+    <Reference Include="log4net, Version=1.2.15.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
+      <HintPath>..\..\AutomateThePlanetPoster\packages\log4net.2.0.5\lib\net45-full\log4net.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -88,7 +89,6 @@
     <Compile Include="Managers\SerializationManager.cs" />
     <Compile Include="Managers\TestCaseManagerRegistryManager.cs" />
     <Compile Include="Managers\UndoRedoManager.cs" />
-    <Compile Include="Properties\AssemblyInfo.log4net.cs" />
     <Compile Include="Configuration\ConfigModificator.cs" />
     <Compile Include="Configuration\ConfigModificatorSettings.cs" />
     <Compile Include="Email\EmailMessageData.cs" />
